--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">LocationTexter</string>
+    <string name="app_title">Location Texter</string>
 
     <string name="action_settings">Settings</string>
 
