--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,10 @@
     <string name="app_name">LocationTexter</string>
     <string name="app_title">Location Texter</string>
 
+    <string name="preference_file_key">location_texter_preferences</string>
+
     <string name="action_settings">Settings</string>
+    <string name="preference_interval_key">interval_preference</string>
+    <string name="preference_contacts_key">contacts_preference</string>
 
 </resources>
